--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "lambdaify",
-  "version": "1.0.0",
-  "description": "Create aws lambda apis easily",
-  "main": "lib/lambdaify.js",
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "test": "jest --config jestconfig.json --coverage",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags",
-    "test:func": "npm run build && node example/example.js"
-  },
-  "keywords": [
-    "lambda",
-    "api",
-    "aws",
-    "serverless",
-    "serverless api"
-  ],
-  "author": "Raghav Sahai",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.89",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "jest": "^27.4.7",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.4"
-  }
+    "name": "lambdaify",
+    "version": "1.0.0",
+    "description": "Create aws lambda apis easily",
+    "main": "lib/lambdaify.js",
+    "scripts": {
+        "build": "tsc",
+        "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+        "test": "jest --config jestconfig.json --coverage",
+        "prepare": "npm run build",
+        "prepublishOnly": "npm test && npm run lint",
+        "preversion": "npm run lint",
+        "version": "npm run format && git add -A src",
+        "postversion": "git push && git push --tags",
+        "test:func": "npm run build && node example/example.js",
+        "prepare:husky": "husky install"
+    },
+    "keywords": [
+        "lambda",
+        "api",
+        "aws",
+        "serverless",
+        "serverless api"
+    ],
+    "author": "Raghav Sahai",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/aws-lambda": "^8.10.89",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.9.1",
+        "@typescript-eslint/parser": "^5.9.1",
+        "eslint": "^8.6.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-jest": "^26.0.0",
+        "husky": "^7.0.4",
+        "jest": "^27.4.7",
+        "prettier": "^2.5.1",
+        "ts-jest": "^27.1.3",
+        "typescript": "^4.5.4"
+    }
 }
