--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "semi": true,
     "singleQuote": true,
     "arrowParens": "avoid",
-    "tabWidth": 4
+    "tabWidth": 4,
+    "bracketSpacing": true
 }
